<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/title"
            android:textColor="#1147B8"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/formCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="18dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="24dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="18dp"
                android:paddingTop="22dp"
                android:paddingEnd="18dp"
                android:paddingBottom="22dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text1"
                    android:textColor="#102A55"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit1"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_input"
                    android:hint="@string/edit1"
                    android:inputType="numberDecimal|numberSigned"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="#102A55"
                    android:textColorHint="#7B8495"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text2"
                    android:textColor="#102A55"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit1" />

                <EditText
                    android:id="@+id/edit2"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_input"
                    android:hint="@string/edit2"
                    android:inputType="numberDecimal|numberSigned"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="#102A55"
                    android:textColorHint="#7B8495"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView3" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text3"
                    android:textColor="#102A55"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit2" />

                <EditText
                    android:id="@+id/edit3"
                    android:layout_width="0dp"
                    android:layout_height="54dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_result"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/edit3"
                    android:inputType="numberDecimal|numberSigned"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="#1147B8"
                    android:textColorHint="#7B8495"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView4" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="5dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/button1"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:backgroundTint="#145BE7"
                    app:cornerRadius="13dp"
                    app:layout_constraintEnd_toStartOf="@id/button2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edit3" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/button2"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:backgroundTint="#145BE7"
                    app:cornerRadius="13dp"
                    app:layout_constraintBottom_toBottomOf="@id/button1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button1"
                    app:layout_constraintTop_toTopOf="@id/button1" />

                <!-- DIFFERENCE -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/button3"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="#145BE7"
                    app:cornerRadius="13dp"
                    app:layout_constraintEnd_toStartOf="@id/button4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button1" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/button4"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:backgroundTint="#145BE7"
                    app:cornerRadius="13dp"
                    app:layout_constraintBottom_toBottomOf="@id/button3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/button3"
                    app:layout_constraintTop_toTopOf="@id/button3" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/button5"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#6C757D"
                    app:cornerRadius="13dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button3" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/button6"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="#102A55"
                    app:cornerRadius="13dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>